
EXTRA_DIST = geda-scheme.texi geda-scheme.info

# Maybe not the best thing to have texinfo as a dependency
# to build a single info file from a static source ...
info_TEXINFOS = geda-scheme.texi

MOSTLYCLEANFILES     = *.log core FILE *~
CLEANFILES           = *.log core FILE *~
DISTCLEANFILES       = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in
