exampledir = $(docdir)/examples/TwoStageAmp/

nobase_example_DATA = \
		attribs \
		gafrc \
		Simulation.cmd \
		TwoStageAmp.sch \
		spice.netlist \
		model/2N3904.mod \
		sym/transistor.sym

EXTRA_DIST = $(nobase_example_DATA)

MOSTLYCLEANFILES = gschem.log *~
CLEANFILES = gschem.log *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = gschem.log *~ Makefile.in

