exampledir = $(docdir)/examples/gTAG/

example_DATA =  attribs \
				crdist.sh \
				gafrc \
				gnetlistrc \
				gTAG.sch \
				gTAG-drc2.txt \
				gTAG-pcb.net \
				README \
				bom/gTAG.bom \
				bom/gTAG-bom.csv \
				ps/gTAG.ps \
				ps/gTAG-consio.ps \
				ps/gTAG-jtagio.ps \
				ps/gTAG-psu.ps \
				ps/gTAG-ucont.ps \
				sch/gTAG-consio.sch \
				sch/gTAG-jtagio.sch \
				sch/gTAG-psu.sch \
				sch/gTAG-ucont.sch \
				sht/copyleft.sym \
				sht/gTAG-consio.sym \
				sht/gTAG-jtagio.sym \
				sht/gTAG-psu.sym \
				sht/gTAG-ucont.sym \
				sym/24C64-gt.sym \
				sym/7414-gt.sym \
				sym/CY7C64603-52NC-gt.sym \
				sym/MAX882-gt.sym \
				sym/SN75240PW-gt.sym

EXTRA_DIST = ChangeLog-1.0 $(example_DATA)

MOSTLYCLEANFILES     = *.log *~
CLEANFILES           = *.log *~
DISTCLEANFILES       = *.log *~
MAINTAINERCLEANFILES = *.log *~ core Makefile.in

