## $Id$ -*- indent-tabs-mode: t; c-basic-offset: 2 tab-width: 8 -*-
##
## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
		builtins.h \
		gaf_getopt.h \
		gettext.h

MOSTLYCLEANFILES     = *~
CLEANFILES           = *~
DISTCLEANFILES       = *~
MAINTAINERCLEANFILES = *~ Makefile.in
