## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
        gattrib.h \
	globals.h \
	prototype.h \
	x_states.h \
	i_vars.h \
	struct.h \
	gtksheet.h \
	gtksheet-marshal.h \
        gtkitementry.h \
	gtksheettypebuiltins.h	\
	gtksheetwidget.h

MOSTLYCLEANFILES = *.log core FILE *~ #*#
CLEANFILES = *.log core FILE *~ #*#
DISTCLEANFILES = *.log core FILE *~ #*#
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in #*#

