## Process this file with automake to produce Makefile.in
SUBDIRS = gtksheet

noinst_HEADERS =  gtksheet.h \
		 gattrib.h \
		 gattrib_dialog.h \
		 globals.h \
		 g_rc.h \
		 prototype.h \
		 i_vars.h \
		 struct.h

MOSTLYCLEANFILES     = *.log core FILE *~
CLEANFILES           = *.log core FILE *~
DISTCLEANFILES       = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in

